export const snapshot = {};

snapshot[`collect - export.ts 1`] = `
{
  code: {
    span: {
      end: {
        character: 71,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - multiple_imports.ts 1`] = `
{
  code: {
    span: {
      end: {
        character: 71,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - multiple_imports.ts 2`] = `
{
  code: {
    span: {
      end: {
        character: 74,
        line: 1,
      },
      start: {
        character: 28,
        line: 1,
      },
    },
    specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
  },
  from: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    protocol: "https:",
    version: "0.50.0",
  },
  to: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - multiple_imports.ts 3`] = `
{
  code: {
    span: {
      end: {
        character: 40,
        line: 2,
      },
      start: {
        character: 18,
        line: 2,
      },
    },
    specifier: "npm:node-emoji@2.0.0",
  },
  from: {
    name: "node-emoji",
    path: "",
    protocol: "npm:",
    version: "2.0.0",
  },
  to: {
    name: "node-emoji",
    path: "",
    protocol: "npm:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - import_map_referred 1`] = `
{
  code: {
    span: {
      end: {
        character: 19,
        line: 0,
      },
      start: {
        character: 14,
        line: 0,
      },
    },
    specifier: "dax",
  },
  from: {
    name: "deno.land/x/dax",
    path: "/mod.ts",
    protocol: "https:",
    version: "0.17.0",
  },
  to: {
    name: "deno.land/x/dax",
    path: "/mod.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - updated_import_and_outdated_export.ts 1`] = `
{
  code: {
    span: {
      end: {
        character: 84,
        line: 1,
      },
      start: {
        character: 29,
        line: 1,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert_equals.ts",
    protocol: "https:",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert_equals.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - import_map 1`] = `
{
  code: {
    span: {
      end: {
        character: 38,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "std/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/",
    protocol: "https:",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - import_map 2`] = `
{
  code: {
    span: {
      end: {
        character: 40,
        line: 1,
      },
      start: {
        character: 28,
        line: 1,
      },
    },
    specifier: "deno_graph",
  },
  from: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    protocol: "https:",
    version: "0.50.0",
  },
  to: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - import_map 3`] = `
{
  code: {
    span: {
      end: {
        character: 36,
        line: 2,
      },
      start: {
        character: 24,
        line: 2,
      },
    },
    specifier: "node-emoji",
  },
  from: {
    name: "node-emoji",
    path: "",
    protocol: "npm:",
    version: "1.0.0",
  },
  to: {
    name: "node-emoji",
    path: "",
    protocol: "npm:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - npm.ts 1`] = `
{
  code: {
    span: {
      end: {
        character: 40,
        line: 0,
      },
      start: {
        character: 18,
        line: 0,
      },
    },
    specifier: "npm:node-emoji@2.0.0",
  },
  from: {
    name: "node-emoji",
    path: "",
    protocol: "npm:",
    version: "2.0.0",
  },
  to: {
    name: "node-emoji",
    path: "",
    protocol: "npm:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - import_and_export.ts 1`] = `
{
  code: {
    span: {
      end: {
        character: 71,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - import_and_export.ts 2`] = `
{
  code: {
    span: {
      end: {
        character: 74,
        line: 1,
      },
      start: {
        character: 28,
        line: 1,
      },
    },
    specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
  },
  from: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    protocol: "https:",
    version: "0.50.0",
  },
  to: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - import_map_no_resolve 1`] = `
{
  code: {
    span: {
      end: {
        character: 71,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - relative_import 1`] = `
{
  code: {
    span: {
      end: {
        character: 71,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - updated_and_outdated.ts 1`] = `
{
  code: {
    span: {
      end: {
        character: 84,
        line: 1,
      },
      start: {
        character: 29,
        line: 1,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert_equals.ts",
    protocol: "https:",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert_equals.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - multiple_modules 1`] = `
{
  code: {
    span: {
      end: {
        character: 84,
        line: 0,
      },
      start: {
        character: 29,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert_equals.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert_equals.ts",
    protocol: "https:",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert_equals.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - multiple_modules 2`] = `
{
  code: {
    span: {
      end: {
        character: 71,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - multiple_modules 3`] = `
{
  code: {
    span: {
      end: {
        character: 74,
        line: 1,
      },
      start: {
        character: 28,
        line: 1,
      },
    },
    specifier: "https://deno.land/x/deno_graph@0.50.0/mod.ts",
  },
  from: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    protocol: "https:",
    version: "0.50.0",
  },
  to: {
    name: "deno.land/x/deno_graph",
    path: "/mod.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - multiple_modules 4`] = `
{
  code: {
    span: {
      end: {
        character: 40,
        line: 2,
      },
      start: {
        character: 18,
        line: 2,
      },
    },
    specifier: "npm:node-emoji@2.0.0",
  },
  from: {
    name: "node-emoji",
    path: "",
    protocol: "npm:",
    version: "2.0.0",
  },
  to: {
    name: "node-emoji",
    path: "",
    protocol: "npm:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - import.ts 1`] = `
{
  code: {
    span: {
      end: {
        character: 71,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std@0.200.0/assert/assert.ts",
  },
  from: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "0.200.0",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - unversioned.ts 1`] = `
{
  code: {
    span: {
      end: {
        character: 63,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "https://deno.land/std/assert/assert.ts",
  },
  from: {
    name: "deno.land/std/assert/assert.ts",
    path: "",
    protocol: "https:",
  },
  to: {
    name: "deno.land/std",
    path: "/assert/assert.ts",
    protocol: "https:",
    version: "123.456.789",
  },
}
`;

snapshot[`collect - jsr.ts 1`] = `
{
  code: {
    span: {
      end: {
        character: 48,
        line: 0,
      },
      start: {
        character: 23,
        line: 0,
      },
    },
    specifier: "jsr:@std/assert@0.210.0",
  },
  from: {
    name: "@std/assert",
    path: "",
    protocol: "jsr:",
    version: "0.210.0",
  },
  to: {
    name: "@std/assert",
    path: "",
    protocol: "jsr:",
    version: "123.456.789",
  },
}
`;
